Update email template and table generation to match Dashboard design

--- a/emailTemplate.html
+++ b/emailTemplate.html
@@ -1,44 +1,151 @@
-<!-- emailTemplate.html -->
-<!-- Author: Vincent Wachira -->
-<!-- Version: v1.0 -->
-<!-- Date: September 13, 2025 -->
-<!-- Description: HTML template for job digest emails. Includes styled table and placeholder for <%jobsTable%>. -->
-
 <!DOCTYPE html>
 <html>
+
 <head>
   <title>Job Search Update</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <style>
+    /* Inlining critical styles for email client compatibility */
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif;
+      background-color: #eff6ff;
+      color: #1f2937;
+    }
+
+    .container {
+      width: 100%;
+      width: 600px;
+      max-width: 600px;
+      margin: 0 auto;
+      background-color: #ffffff;
+      border-radius: 12px;
+      overflow: hidden;
+      box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+    }
+
+    .header {
+      background-color: #2563eb;
+      padding: 32px 24px;
+      text-align: center;
+    }
+
+    .header h1 {
+      color: #ffffff;
+      margin: 0;
+      font-size: 24px;
+      font-weight: 700;
+      letter-spacing: -0.025em;
+    }
+
+    .header p {
+      color: #dbeafe;
+      margin: 8px 0 0;
+      font-size: 15px;
+      font-weight: 500;
+    }
+
+    .content {
+      padding: 32px 24px;
+    }
+
+    .section-title {
+      font-size: 18px;
+      font-weight: 600;
+      color: #111827;
+      margin: 0 0 8px;
+    }
+
+    .section-desc {
+      font-size: 14px;
+      color: #6b7280;
+      margin: 0 0 24px;
+    }
+
+    .footer {
+      background-color: #f9fafb;
+      padding: 24px;
+      text-align: center;
+      border-top: 1px solid #e5e7eb;
+    }
+
+    .footer p {
+      font-size: 12px;
+      color: #9ca3af;
+      margin: 4px 0;
+    }
+
+    .btn {
+      display: inline-block;
+      background-color: #2563eb;
+      color: #ffffff;
+      text-decoration: none;
+      padding: 10px 20px;
+      border-radius: 6px;
+      font-weight: 500;
+      font-size: 14px;
+      margin-top: 20px;
+    }
+  </style>
 </head>
-<body style="margin: 0; padding: 0; font-family: 'Helvetica Neue', Arial, sans-serif; background-color: #f4f4f9; color: #333;">
-  <table role="presentation" width="100%" cellspacing="0" cellpadding="0" style="background-color: #f4f4f9; padding: 20px;">
+
+<body
+  style="margin: 0; padding: 0; font-family: 'Inter', 'Helvetica Neue', Arial, sans-serif; background-color: #eff6ff; color: #1f2937;">
+  <table role="presentation" width="100%" cellspacing="0" cellpadding="0"
+    style="background-color: #eff6ff; padding: 40px 20px;">
     <tr>
       <td align="center">
-        <table role="presentation" width="100%" style="max-width: 600px; background-color: #ffffff; border-radius: 8px; box-shadow: 0 2px 4px rgba(0,0,0,0.1);">
+        <!-- Main Container -->
+        <table role="presentation" width="600" cellspacing="0" cellpadding="0"
+          style="background-color: #ffffff; border-radius: 12px; overflow: hidden; box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1); width: 600px; max-width: 600px;">
           <!-- Header -->
           <tr>
-            <td style="background-color: #007bff; padding: 20px; text-align: center; border-top-left-radius: 8px; border-top-right-radius: 8px;">
-              <h1 style="color: #ffffff; margin: 0; font-size: 24px; font-weight: 600;">Job Search Update - <%= today %></h1>
-              <p style="color: #e6f0ff; margin: 8px 0 0; font-size: 14px;">Your personalized job matches</p>
+            <td style="background-color: #2563eb; padding: 32px 24px; text-align: center;">
+              <!-- Briefcase Icon representation -->
+              <div
+                style="display: inline-block; background-color: rgba(255,255,255,0.2); border-radius: 8px; padding: 8px; margin-bottom: 12px;">
+                <span style="font-size: 20px; color: white;">💼</span>
+              </div>
+              <h1 style="color: #ffffff; margin: 0; font-size: 24px; font-weight: 700; letter-spacing: -0.025em;">Job
+                Search Update</h1>
+              <p style="color: #dbeafe; margin: 8px 0 0; font-size: 15px; font-weight: 500;">
+                <%= today %>
+              </p>
             </td>
           </tr>
+
           <!-- Body -->
           <tr>
-            <td style="padding: 20px;">
-              <h2 style="font-size: 20px; color: #333; margin: 0 0 15px;">Top Job Matches</h2>
-              <p style="font-size: 16px; color: #555; margin: 0 0 20px;">Here are the latest opportunities tailored for you:</p>
+            <td style="padding: 32px 24px;">
+              <h2 style="font-size: 18px; font-weight: 600; color: #111827; margin: 0 0 8px;">Top Opportunities</h2>
+              <p style="font-size: 14px; color: #6b7280; margin: 0 0 24px; line-height: 1.5;">
+                We found the following roles matching your preferences for <strong>Grid Connection</strong> and
+                <strong>Power Systems</strong>.
+              </p>
+
+              <!-- Jobs Table Injection -->
               <%= jobsTable %>
+
+                <div style="text-align: center; margin-top: 32px;">
+                  <a href="https://docs.google.com/spreadsheets/d/1fwfkdyReTRCMywq6VmQT7XN5KVu0DWcBOpY0XOxgoD0"
+                    class="btn"
+                    style="display: inline-block; background-color: #2563eb; color: #ffffff; text-decoration: none; padding: 12px 24px; border-radius: 8px; font-weight: 600; font-size: 14px;">Open
+                    Job Dashboard</a>
+                </div>
             </td>
           </tr>
+
           <!-- Footer -->
           <tr>
-            <td style="background-color: #f8f9fa; padding: 15px; text-align: center; border-bottom-left-radius: 8px; border-bottom-right-radius: 8px;">
-              <p style="font-size: 14px; color: #666; margin: 0;">Sent by <strong>Job Aggregator</strong></p>
-              <p style="font-size: 14px; color: #666; margin: 8px 0;">
-                <a href="https://docs.google.com/spreadsheets/d/1fwfkdyReTRCMywq6VmQT7XN5KVu0DWcBOpY0XOxgoD0" style="color: #007bff; text-decoration: none;">View all jobs</a> | 
-                <a href="mailto:wachirakungu@gmail.com?subject=Unsubscribe from Job Aggregator" style="color: #007bff; text-decoration: none;">Unsubscribe</a>
+            <td style="background-color: #f9fafb; padding: 24px; text-align: center; border-top: 1px solid #e5e7eb;">
+              <p style="font-size: 12px; color: #6b7280; margin: 0 0 8px;">
+                Sent by <strong>Job Aggregator Automation</strong>
               </p>
-              <p style="font-size: 12px; color: #999; margin: 8px 0;">Built with &hearts; by Vincent Wachira</p>
+              <p style="font-size: 12px; color: #9ca3af; margin: 0;">
+                <a href="#" style="color: #6b7280; text-decoration: underline;">Unsubscribe</a>
+              </p>
             </td>
           </tr>
         </table>
@@ -46,4 +153,5 @@
     </tr>
   </table>
 </body>
+
 </html>
